<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_blue"
        android:title="@string/title_home"
        android:titleCondensed="@string/title_home"/>
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_feed" />
    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_blackberry"
        android:title=""
        app:showAsAction="ifRoom"
        app:itemIconSize="50px"/>
    <item
        android:id="@+id/navigation_network"
        android:icon="@drawable/ic_network"
        android:title="@string/title_network" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
