<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pertamina.musicoolpromo.view.fragment.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.pertamina.musicoolpromo.view.fragment.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_qr"
        android:name="com.pertamina.musicoolpromo.view.fragment.QRFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_qr" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="com.pertamina.musicoolpromo.view.fragment.NetworkFragment"
        android:label="@string/title_network"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pertamina.musicoolpromo.view.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>